[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "admittance_matrix"
version = "0.1.0"
description = "Python library for building admittance matrices from DIgSILENT PowerFactory networks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PowerFactory User"}
]
keywords = ["powerfactory", "admittance", "matrix", "power-systems", "stability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/user/admittance_matrix"
Documentation = "https://github.com/user/admittance_matrix#readme"
Repository = "https://github.com/user/admittance_matrix"

[tool.setuptools.packages.find]
where = ["."]
include = ["admittance_matrix*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
