[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "admittance_matrix"
version = "0.1.3"
description = "Python library for building admittance matrices from DIgSILENT PowerFactory networks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PowerFactory User"}
]
keywords = ["powerfactory", "admittance", "matrix", "power-systems", "stability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/valenciaga1231/PF_Admittance_Matrix"
Documentation = "https://github.com/valenciaga1231/PF_Admittance_Matrix#readme"
Repository = "https://github.com/valenciaga1231/PF_Admittance_Matrix"

[tool.setuptools.packages.find]
where = ["."]
include = ["admittance_matrix*"]
